--- a/css/styles.css
+++ b/css/styles.css
@@ -10,16 +10,21 @@ img {
     width: 600px;
 }
 
-.description {
-    width: 600px;
+
+
+.top {
+    text-align: center;
 }
 
 .left {
     width: 600px;
     float: left;
+    margin-top: 30px;
 }
 
 .right {
     width: 600px;
     float: left;
+    margin-left: 30px;
+
 }
