--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,8 @@ h1 {
     font-family: 'Coiny', cursive;
 }
 
-img {
-    width: 650px;
+iframe {
+    width: 100%;
 }
 
 .top {
@@ -16,16 +16,17 @@ img {
 }
 
 .left {
-    width: 650px;
+    width: 40%;
     float: left;
     margin-top: 30px;
-    margin-left: 30px;
+    margin-left: 5%;
+    
 }
 
 .right {
-    width: 650px;
+    width: 40%;
     float: left;
-    margin-left: 30px;
+    margin-left: 5%;
 }
 
 ol li {
