Modify CSS selector for headings and body

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
-body {
+#content {
     background-color:#FAEDEC;
     font-family: 'Roboto', sans-serif;
 }
 
-h1 {
+.title {
     font-family: 'Coiny', cursive;
 }
 
@@ -13,26 +13,39 @@ iframe {
 
 .top {
     text-align: center;
+    padding-top: 20px;
+    margin: 0 auto;
 }
 
 .left {
-    width: 40%;
+    width: 600px;
     float: left;
     margin-top: 30px;
-    margin-left: 5%;
+    
     
 }
 
 .right {
-    width: 40%;
+    width: 600px;
     float: left;
-    margin-left: 5%;
+    margin-top: 30px;
+    
 }
 
 ol li {
     margin-bottom: 20px;
 }
 
-li a:hover {
-    color:blue;
+.otherRecipes a:hover {
+    color: purple;
 }
+
+.otherRecipes {
+    text-align: center;
+    padding: 30px;
+}
+
+#otherRecipes {
+    text-decoration-line: underline;
+}
+
