--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
 #content {
     background-color:#FAEDEC;
     font-family: 'Roboto', sans-serif;
+
 }
+
 
 .title {
     font-family: 'Coiny', cursive;
@@ -20,16 +22,18 @@ iframe {
 .left {
     width: 600px;
     float: left;
-    margin-top: 30px;
-    
-    
+    margin: 20px 0;
 }
 
 .right {
     width: 600px;
     float: left;
-    margin-top: 30px;
-    
+    margin: 20px 0;
+}
+
+.row {
+    padding: 30px;
+    border-bottom: 1px dashed grey;
 }
 
 ol li {
@@ -53,7 +57,8 @@ ul li {
     text-decoration-line: underline;
 }
 
-#checkbox {
-    background-color: red;
+.chk  {
+    border: 1px solid red !important; 
     margin-right: 10px;
 }
+
